--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "express": "^4.16.3",
     "express-session": "^1.15.6",
     "hbs": "^4.0.1",
+    "js-alert": "^1.0.4",
     "mongodb": "^3.1.6",
     "mongoose": "^5.2.16",
     "passport": "^0.4.0",
